*Dodanie dodatkowych danych w instalatorze (info o zespole, adres do githuba). *Dodanie tworzenia skrótu aplikacji na pulpicie po instalacji. *Skończenie korekty helpa.

--- a/WindowsFormsApp1/Resources/Help/Dodanie kierowcow.htm
+++ b/WindowsFormsApp1/Resources/Help/Dodanie kierowcow.htm
@@ -19,22 +19,16 @@
         <h2>
             Dodawanie kierowców
         </h2>
-        <li>
-            Poprzez wybór ekranu "Dodawanie kierowców" mamy dostęp do formularza tworzenie nowego kierowcy.
-        </li>
-        <p>
-            <img src="wybekran8.jpg">
-        </p>
         <p>
             <li>
-                Po kliknięciu pojawi się okno formularza, w którym podajemy dane nowo tworzonego kierowcy. Na dane składają się Imię, Nazwisko i numer PESEL. Nowego kierowcę dodajemy, używając przycisku "Dodaj"  w formularzu. Przycisk "Reset" umożliwia wyczyszczenie pól formularza.
+                Po kliknięciu <b>Dodawanie kierowców</b> pojawia się okno formularza, w którym wpisujemy dane kierowcy. Składają się one z <b>imienia</b>, <b>nazwiska</b>  i <b>numeru PESEL</b>.
             </li>  
         </p>
         <p>
             <img src="dodkierowca.jpg">
         </p>
         <li>
-            Wypełnienie wszystkich pól jest wymagane. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości utworzenia nowego kierowcy.
+            Formularz zatwierdzamy naciskając przycisk <b>Dodaj</b>.
         </li>
     </body>
 </html>
