--- a/WindowsFormsApp1/Resources/Help/Tworzenie kursow.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie kursow.htm
@@ -21,24 +21,14 @@
         </h2>
         <p>
             <li>
-                Poprzez wybór ekranu "Tworzenie kursów" mamy dostęp do formularza dodania nowego kursu.
-            </li>
-        </p>
-        <p>
-            <img src="wybekran4.jpg">
-        </p>
-        <p>
-            <li>
-                Po kliknięciu pojawi się okno formularza, w którym wybieramy numer linii, numer trasy oraz rodzaj tworzonego kursu roboczy lub świąteczny. Nowy kurs tworzymy, używając przycisku "Utwórz"  w formularzu.
+                Po kliknięciu <b>Tworzenie kursów</b> pojawia się okno formularza, w którym wybieramy <b>numer linii</b>, <b>numer trasy</b> oraz <b>rodzaj tworzonego kursu</b>.
             </li>
         </p>
         <p>
             <img src="twonowykurs.jpg">
         </p>
-        <p>
-            <li>
-                Wypełnienie wszystkich pól jest wymagane. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości utworzenia nowego kursu.
-            </li>
-        <p>
+        <li>
+            Formularz zatwierdzamy naciskając przycisk <b>Utwórz</b>.
+        </li>
     </body>
 </HTML>
