--- a/WindowsFormsApp1/Resources/Help/Tworzenie lini autobusowych.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie lini autobusowych.htm
@@ -21,16 +21,14 @@
         </h2>
         <p>
             <li>
-                Po kliknięciu pojawi się okno formularza, w którym podajemy nazwę nowej linii oraz wybieramy opcję kursowania w pętli.Nową linie tworzymy, używając przycisku "Utwórz"  w formularzu.
+                Po kliknięciu <b>Tworzenie linii autobusowych</b> pojawia się okno formularza, w którym podajemy: <b>nazwę linii</b> oraz wybieramy opcję kursowania w pętli.
             </li>
         </p>
         <p>
             <img src="twonowejlini.jpg">
         </p>
-        <p>
-            <li>
-                Wypełnienie wszystkich pól jest wymagane. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości utworzenia nowej linii.
-            </li>
-        <p>
+        <li>
+            Formularz zatwierdzamy naciskając przycisk <b>Utwórz</b>.
+        </li>
     </body>
 </html>
