--- a/WindowsFormsApp1/Resources/Help/Tworzenie pojazdow.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie pojazdow.htm
@@ -20,10 +20,18 @@
         </h2>  
 
         <li>
-            Po kliknięciu "Tworzenie pojazdów" pojawia się okno formularza, w którym należy podać <b>markę</b>, <b>model</b>, <b>numer rejestracyjny</b>, <b>numer VIN</b> oraz <b>rok produkcji</b> tworzonego pojazdu. Następnie ustawiamy jego status oraz to czy jest on niskopodłogowy. Formularz zatwierdzamy naciskając przycisk "Utwórz".
+            Po wybraniu "Tworzenie pojazdów" pojawia się okno formularza, w którym należy podać <b>markę</b>, <b>model</b>, <b>numer rejestracyjny</b>, <b>numer VIN</b> oraz <b>rok produkcji</b> tworzonego pojazdu.
+        </li>
+        <br>
+        <br>
+        <li>
+            Następnie ustawiamy status pojazdu oraz informację o tym czy jest on niskopodłogowy.
         </li>
         <p>
             <img src="dodpojazd.jpg">
         </p>
+        <li>
+            Formularz zatwierdzamy naciskając przycisk <b>Utwórz</b>.
+        </li>
     </body>
 </html>
