--- a/WindowsFormsApp1/Resources/Help/Tworzenie raportu.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie raportu.htm
@@ -20,32 +20,19 @@
             Tworzenie raportu
         </h2>
         <li>
-            Poprzez wybór ekranu "Tworzenie raportu" mamy dostęp do formularza generującego raport w formacie PDF.
-        </li>
-        <p>
-            <img src="wybekran10.jpg">
-        </p>
-        <li>
-            Po kliknięciu pojawi się okno formularza, w którym wybieramy miasto, przystanek oraz kierunek. 
+            Po kliknięciu <b>Tworzenie raportu</b> pojawia się okno formularza, w którym wybieramy <b>miasto</b>, <b>przystanek</b> oraz jego <b>kierunek</b>.
         </li>
         <p>
             <img src="tworaport.jpg">
         </p>
         <li>
-            Wypełnienie wszystkich pól jest wymagane. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości wygenerowania raportu.
-        </li>
-        <br>
-        <li>
-            Aby wygenerować raport, należy użyć przycisku "Zapisz jako" w formularzu. Następnie pojawi się okno zapisu, gdzie wymagane jest podanie nazwy oraz wybór miejsca zapisu raportu. Domyślnie miejscem zapisu jest desktop(pulpit).
+            Aby wygenerować raport, należy nacisnąć przycisk <b>Zapisz jako</b>. Spowoduje to otwarcie okna zapisu, w którym podajemy <b>nazwę raportu</b> oraz jego<b> miejsce zapisu</b>.
         </li>
         <p>
             <img src="zapis.jpg">
         </p>
         <li>
-            Przykładowy wygenerowany raport.
+            Następnie klikamy <b>Zapisz</b> i czekamy, aż program wygeneruje raport.
         </li>
-        <p>
-            <img src="raportt.jpg">
-        </p>
     </body>
 </html>
