--- a/WindowsFormsApp1/Resources/Help/Tworzenie terminow kursowania.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie terminow kursowania.htm
@@ -20,22 +20,13 @@
             Tworzenie terminów kursowania
         </h2>
         <li>
-           Poprzez wybór ekranu "Tworzenie terminów kursowania" mamy dostęp do formularza dodania terminów kursowania.
+            Po kliknięciu <b>Tworzenie terminów kursowania</b> pojawia się okno formularza, w którym wybieramy <b>datę początkową</b> oraz <b>datę końcową</b> tworzonego terminu. Następnie zaznaczamy jego <b>rodzaj </b> lub podajemy własny.
         </li>
-        <p>
-            <img src="wybekran5.jpg">
-        </p>
-        <li>
-            Po kliknięciu pojawi się okno formularza, w którym wybieramy datę początkową oraz datę końcową. Kolejno rodzaj tworzonego okresu czyli okres świąteczny lub roboczy.Możliwe jest równiej wpisanie nazwy  własniej określający rodzaj kursu. Nowy termin kursowania dodajemy, używając przycisk "Dodaj"  w formularzu.
-        </li>
-        <p>
-            <img src="dodterminkurs.jpg">
-        </p>
         <p>
             <img src="dodterminkurs2.jpg">
         </p>
         <li>
-            Wypełnienie wszystkich pól jest wymagane. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości utworzenia nowego terminu kursowania.
+            Formularz zatwierdzamy naciskając przycisk <b>Dodaj</b>.
         </li>
     </body>
 </html>
