--- a/WindowsFormsApp1/Resources/Help/Tworzenie uzytkownikow.htm
+++ b/WindowsFormsApp1/Resources/Help/Tworzenie uzytkownikow.htm
@@ -20,13 +20,13 @@
             Tworzenie użytkowników
         </h2>
         <li>
-            Po kliknięciu pojawi się okno formularza, w którym podajemy nazwę użytkownika, jego hasło oraz wybieramy poziom uprawnień m.in (Administrator, Układacz Tras,Menedżer, Kierowca).Użytkownika tworzymy, używając przycisku “Utwórz” w formularzu.
+            Po kliknięciu <b>Tworzenie użytkowników</b> pojawia się okno formularza, w którym podajemy:<br> <b>nazwę użytkownika</b>, <b>jego hasło</b> oraz wybieramy <b>poziom uprawnień</b><br>(Administrator, Układacz Tras, Menedżer, Kierowca).
         </li>
         <p>
             <img src="twouzyt.jpg">
         </p>
         <li>
-            Wypełnienie wszystkich pól jest obowiązkowe. Nie wypełnienie pól skutkuje pojawieniem się odpowiedniego komunikatu na ekranie i braku możliwości utworzenia nowego konta.
+             Użytkownika tworzymy, używając przycisku <b>Utwórz</b> w formularzu.
         </li>
     </body>
 </html>
