--- a/WindowsFormsApp1/Resources/Help/Zarzadzanie trasami.htm
+++ b/WindowsFormsApp1/Resources/Help/Zarzadzanie trasami.htm
@@ -20,43 +20,31 @@
             Zarządzanie trasami
         </h2>
         <li>
-            Poprzez wybór ekranu "Zarządzanie trasami" mamy dostęp do formularza edycji dostępnych tras i tworzenia nowych tras.
-        </li>
-        <p>
-            <img src="wybekran11.jpg">
-        </p>
-        <li>
-            Po kliknięciu pojawi się okno formularza, w którym wybieramy numer lini, numer kursu oraz możliwość<br/>stworzenia trasy na podstawie zedytowanej tabeli.Aby utworzyć (nową) trase należy użyć przycisku "Utwórz"  w formularzu.
+            Po kliknięciu <b>Zarządzanie trasami</b> pojawia się okno formularza, w którym wybieramy: <b>numer lini</b>, <b>numer kursu</b> oraz możliwość stworzenia trasy na podstawie zedytowanej tabeli. Aby utworzyć (nową) trasę należy użyć przycisku <b>Utwórz</b>.
         </li>
         <p>
             <img src="zt1.jpg">
         </p>
-        <p>
-            <img src="zt2.jpg">
-        </p>
+        <br>
         <li>
-            Po kliknięciu pojawi się okno formularza dodania przystanku do trasy, w którym podajemy nazwe miasta, przystanku.Wybieramy kierunek trasy oraz podajemy czas odjazu w formacie(GG:MM).Aby dodać przystanek do trasy należy<br/> użyć przycisku "Dodaj"  w formularzu. 
+            Po kliknięciu <b>Dodaj</b> pojawia się okno dodawania przystanku do trasy, w którym wybieramy: <b>miasto</b>, <b>przystanek</b>, <b>kierunek</b> oraz podajemy <b>czas odjazu</b> w formacie GG:MM. <br>Przystanek dodajemy do trasy klikając <b>Dodaj</b>.
         </li>
         <p>
             <img src="zt3.jpg">
         </p>
         <li>
-            Jeżeli poprawnie przeprowadzono powyższe dodanie do trasy, w tabeli powinen zostać dodany rekord<br/>z przystankiem tak jak poniżej.Aby utworzyć nową trase należy użyć przycisku "Utwórz"  w formularzu
+            Jeżeli poprawnie wykonano powyższy proces to w tabeli powinen zostać dodany rekord<br> z nowym przystankiem.
         </li>
         <p>
             <img src="zt4.jpg">
         </p>
         <li>
-            Aby usunąć dodany przystanek do trasy, należy użyć przycisku "Usuń" w oknie formularza.
+            Aby usunąć przystanek z trasy, należy zaznaczyć go w tabeli, a następnie kliknąć <b>Usuń</b>.
         </li>
-        <p>
-            <img src="zt1.jpg">
-        </p>
+        <br>
+        <br>
         <li>
-            Aby wyczyścić tabele danej trasy z rekordów, należy użyć przycisku "Wyczyść" w oknie formularza.
+            Aby dokonać edycji przystanku należy kliknąć go dwukrotnie w tabeli. 
         </li>
-        <p>
-            <img src="zt5.jpg">
-        </p>
     </body>
 </HTML>
