Dodanie obsługi klawisza F1 - otwarcie pomocy. Dodanie wpisu o zaimplementowanych skrótach klawiszowych (Pierwsze kroki).

--- a/WindowsFormsApp1/Resources/Help/Pierwsze kroki w porgramie.htm
+++ b/WindowsFormsApp1/Resources/Help/Pierwsze kroki w porgramie.htm
@@ -10,6 +10,7 @@
             Pierwsze kroki w porgramie
         </title>
         <style>
+            h3,
             h2,
             p,
             li {
@@ -18,6 +19,9 @@
             img {
                 max-width: 100%;
                 max-height: 100%;
+            }
+            ul li {
+                text-align: left;
             }
         </style>
     </head>
@@ -44,13 +48,43 @@
         </p>
         <li>
             Aby zalogować się do programu należy wypełnić pole nazwy użytkownika
-            oraz hasła danym otrzymanymi od administratora oraz kilkn±ć <b>Zaloguj</b>.
+            oraz hasła danym otrzymanymi od administratora oraz kilkn±ć
+            <b>Zaloguj</b>.
         </li>
         <p>
             <img src="ustawieniabazy.JPG" />
         </p>
         <li>
-            Aby zmienić ustawienia połączenia z bazą danych (modyfikacja<b> connection stringa</b>) należy na ekranie logowania nacisnąć przycisk <b>Baza danych</b>. Następnie wypełnić powyższy formularz i wybrać <b>Zapisz</b>.
+            Aby zmienić ustawienia połączenia z bazą danych (modyfikacja<b>
+                connection stringa</b
+            >) należy na ekranie logowania nacisnąć przycisk <b>Baza danych</b>.
+            Następnie wypełnić powyższy formularz i wybrać <b>Zapisz</b>.
         </li>
+        <br />
+        <h3>
+            Obsługa skrótów klawiszowych
+        </h3>
+        <p>
+            W programie zaimplementowano obsługę kilku skrótów klawiszowych,
+            które ułatwiają poruszanie się po interfejsie aplikacji:
+        </p>
+
+        <ul>
+            <li>
+                <b>ESC</b> - powrót do poprzedniego ekranu
+            </li>
+            <li>
+                <b>ENTER</b> - zatwierdzanie formularza
+            </li>
+            <li>
+                <b>F1</b> - otwarcie pomocy
+            </li>
+            <li>
+                <b>TAB</b> - zmiana fokusu na następny element
+            </li>
+            <li>
+                <b>SHIFT + TAB</b> - zmiana fokusu na poprzedni element
+            </li>
+        </ul>
     </body>
 </html>
